Traducción y apropiación del blog

--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,2 @@
-<a href="https://github.com/fjsantim/science-blog-template">Github Repo</a>
-<a href="https://pranjaldhole.github.io">About author</a>
+<a href="https://github.com/fjsantim/science-blog-template">Repositorio de Github</a>
+<a href="https://github.com/fjsantim">Sobre el autor</a>
