--- a/_includes/nav-footer.html
+++ b/_includes/nav-footer.html
@@ -1,6 +1,6 @@
 <menu-footer>
 
-	<span>Genre: {{ site.genre }}</span> <br>
-	<span>Site version {{ site.version }}</span>
+	<span>Genero: {{ site.genre }}</span> <br>
+	<span>Versión del sitio {{ site.version }}</span>
 
 </menu-footer>
